2010-08-24  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php
	extensions/agents_modules
	extensions/agents_modules/icon_menu.png: Added new icon
	to the matriz agents/modules extension

2010-08-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed
	the size of the icons when choose 0 pixels into 
	the wizard

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Add the feature of
	hide and shot (toggle) the menu of options in the
	network maps

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Changed the 
	filter form to use the toggle function

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the not hidden by
	default of the div in the toggle function

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Added a function to toggle
	an html code easly. The function is called toggle()

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed a null into
	foreach in SLA function

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed
	an error when add a module into visual map with the 
	wizard for bug: 3051058

2010-08-23  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/nl.mo
	include/languages/pt_BR.po
	include/languages/es.po
	include/languages/pl.mo
	include/languages/ko.po
	include/languages/it.mo
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/ca.po